# Smart-Attendance-System

./: CMakeLists.txt  SmartAttendance.aps  SmartAttendance.vcxproj  SmartAttendance.vcxproj.filters  attendance.db  create_db.py  test.db
src/: db_helper.cpp  db_helper.h  face_detect.cpp  face_detect.h  main.cpp  train_faces.cpp  ui.cpp  ui.h
